attempt to fix options table misalignment

--- a/style/style.css
+++ b/style/style.css
@@ -81,11 +81,10 @@ body {
 
 .options table tr td .subt {
     background-color: transparent;
-    margin: 0 auto;
     margin-left: 16px;
     margin-top: -2px;
     margin-bottom: -2px;
-    width: -webkit-fill-available;
+    width: calc(100% - 16px);
 }
 
 .options table tr td .subt td {
@@ -100,11 +99,10 @@ body {
 
 .options table tr td .submodt {
     background-color: transparent;
-    margin: 0 auto;
     margin-left: 16px;
     margin-top: -2px;
     margin-bottom: -2px;
-    width: -webkit-fill-available;
+    width: calc(100% - 16px);
 }
 
 .options table tr td .submodt td {
